--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -74,8 +74,12 @@
 // }
 
 :root {
+  --modal: #151617;
   --details: #41e8c2;
   --border-radius: 12px;
+  --amount: #f3ba2f;
+  --button-deposit: #440298;
+  --scroll: #616161;
 }
 
 * {
